--- a/partials/header.html
+++ b/partials/header.html
@@ -20,7 +20,7 @@
         <a href="/editorial-board.html" data-i18n="nav_board">ಸಂಪಾದಕ ಮಂಡಳಿ</a>
         <a href="/guidelines.html" data-i18n="nav_submit">ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿ</a>
         <a href="/about.html" data-i18n="nav_about">ನಮ್ಮ ಬಗ್ಗೆ</a>
-        <a href="/contact.html" data-i18n="nav_contact">ಸಂಪರ್ಕಿಸಿ</a>
+
       </div>
     </div>
   </nav>
@@ -38,13 +38,16 @@
         <strong data-i18n="nav_label">Navigate</strong>
         <button class="sp-menu__close" id="spMenuClose" aria-label="Close menu">×</button>
       </div>
+
+      <div class="sp-menu__extra" id="spMenuExtra"></div> 
+
       <nav class="sp-menu__links">
         <a href="/" data-i18n="nav_home">ಮುಖಪುಟ</a>
         <a href="/archive.html" data-i18n="nav_archive">ಲೇಖನ ಸಂಗ್ರಹ</a>
         <a href="/editorial-board.html" data-i18n="nav_board">ಸಂಪಾದಕ ಮಂಡಳಿ</a>
         <a href="/guidelines.html" data-i18n="nav_submit">ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿ</a>
         <a href="/about.html" data-i18n="nav_about">ನಮ್ಮ ಬಗ್ಗೆ</a>
-        <a href="/contact.html" data-i18n="nav_contact">ಸಂಪರ್ಕಿಸಿ</a>
+
       </nav>
     </div>
   </div>
