--- a/partials/header.html
+++ b/partials/header.html
@@ -20,7 +20,7 @@
         <a href="/editorial-board.html" data-i18n="nav_board">ಸಂಪಾದಕ ಮಂಡಳಿ</a>
         <a href="/guidelines.html" data-i18n="nav_submit">ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿ</a>
         <a href="/archive.html" data-i18n="nav_archive">ಲೇಖನ ಸಂಗ್ರಹ</a>
-
+        <a href="/contact.html" data-i18n="nav_contact">ಸಂಪರ್ಕಿಸಿ</a>
       </div>
     </div>
   </nav>
@@ -47,6 +47,7 @@
         <a href="/editorial-board.html" data-i18n="nav_board">ಸಂಪಾದಕ ಮಂಡಳಿ</a>
         <a href="/guidelines.html" data-i18n="nav_submit">ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿ</a>
         <a href="/archive.html" data-i18n="nav_archive">ಲೇಖನ ಸಂಗ್ರಹ</a>
+        <a href="/contact.html" data-i18n="nav_contact">ಸಂಪರ್ಕಿಸಿ</a>
       </nav>
     </div>
   </div>
