--- a/css/home.css
+++ b/css/home.css
@@ -282,7 +282,7 @@
 }
 
 #articles-list a {
-  color: var(--sp-red-700);
+  color: var(--sp-brown-800);
   text-decoration: none;
   font-weight: 700;
   transition: color 0.2s;
